<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CoastalWeatherActivity">


    <TextView
        android:text="@string/riverBayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/riverBayName"
        android:textSize="16sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/dateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView13"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/lastUpdatedTime"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="30dp" />

    <TextView
        android:text="Day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="16sp"
        android:layout_above="@+id/listView1"
        android:layout_toRightOf="@+id/textView13"
        android:layout_toEndOf="@+id/textView13"
        android:paddingLeft="45dp" />

    <TextView
        android:text="@string/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView12"
        android:textSize="16sp"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:layout_above="@+id/listView1"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

    <TextView
        android:text="Tide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView16"
        android:textSize="16sp"
        android:paddingLeft="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_toRightOf="@+id/textView12"
        android:layout_toEndOf="@+id/textView12"
        android:layout_alignBottom="@+id/textView13" />

    <ListView
        android:id="@+id/listView1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_below="@+id/textView13"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="Last Updated:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lastUpdateTextView"
        android:textSize="16sp"
        android:layout_above="@+id/textView13"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/defaultDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lastUpdatedTime"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/riverBayName"
        android:layout_toRightOf="@+id/lastUpdateTextView"
        android:layout_toEndOf="@+id/lastUpdateTextView"
        android:paddingLeft="10dp" />


</RelativeLayout>
