<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coastlForecast"
        android:id="@+id/coastlForecast"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="Select State"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView15"
            android:layout_weight="0.90"
            tools:text="Select State"
            android:textSize="20sp"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectCity"
            android:id="@+id/selectCityTextView"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_weight="0.11">

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectCity"
            android:id="@+id/dateSpinner2"
            android:entries="@array/myStatesOther"
            android:layout_gravity="center_horizontal"
            android:spinnerMode="dropdown"
            android:layout_weight="0.65" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectCity"
            android:id="@+id/dateSpinner3"
            android:entries="@array/otherCities"
            android:layout_gravity="center_horizontal"
            android:spinnerMode="dropdown"
            android:layout_weight="0.36" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coastalWeather"
        android:id="@+id/coastalWeather"
        android:onClick="sendMessage"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="     "
        android:id="@+id/empty"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Weather Only Forecast"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Current"
        android:id="@+id/currentWeather"
        android:onClick="sendMessage"
        android:layout_gravity="center_horizontal" />

    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="5 Day forecast"
    android:id="@+id/fiveDayWeather"
    android:onClick="sendMessage"
    android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Tide Prediction Only"
        android:id="@+id/textView4"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_weight="0.05"
        android:textAlignment="center" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_weight="0.14">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="206dp"
            android:layout_height="match_parent">

            <TextView
                android:text="Select State"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView16"
                tools:text="Select State"
                android:textSize="20sp"
                android:textAlignment="center" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selectCity"
                android:id="@+id/dateSpinner4"
                android:entries="@array/myStatesTides"
                android:layout_gravity="center_horizontal"
                android:spinnerMode="dropdown" />


        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selectCity"
                android:id="@+id/selectCityTextView2"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:textAlignment="center" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selectCity"
                android:id="@+id/dateSpinner"
                android:entries="@array/tidesCities"
                android:layout_gravity="center_horizontal"
                android:spinnerMode="dropdown" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Current Tides"
        android:id="@+id/currentTides"
        android:onClick="sendMessage"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2 Day Forecast Tides"
        android:id="@+id/TwoDayForecastTides"
        android:onClick="sendMessage"
        android:layout_gravity="center_horizontal" />

</LinearLayout>