<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CoastalWeatherActivity">


    <TextView
        android:text="@string/riverBayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/riverBayName"
        android:textSize="16sp" />

    <TextView
        android:text="Height ft."
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView16"
        android:textSize="16sp"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_alignBaseline="@+id/textView13"
        android:layout_alignBottom="@+id/textView13"
        android:layout_toRightOf="@+id/textView13"
        android:layout_toEndOf="@+id/textView13" />

    <TextView
        android:text="humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:textSize="16sp"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="water temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:textSize="16sp"
        android:layout_below="@+id/textView8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        android:textSize="16sp"
        android:layout_below="@+id/textView9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="air pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textSize="16sp"
        android:layout_below="@+id/air_temp_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="conductivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:textSize="16sp"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="rain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textSize="16sp"
        android:layout_below="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="air temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/air_temp_label"
        android:textSize="16sp"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/listView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="loading..."
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bar_press_value"
        android:textSize="16sp"
        android:layout_above="@+id/textView7"
        android:layout_alignLeft="@+id/textView16"
        android:layout_alignStart="@+id/textView16"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/air_temp_value"
        android:textSize="16sp"
        android:layout_above="@+id/bar_press_value"
        android:layout_alignLeft="@+id/bar_press_value"
        android:layout_alignStart="@+id/bar_press_value"
        android:text="@string/DisplayWaitingOnWebRequest" />

    <TextView
        android:text="loading..."
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/conductivity_value"
        android:textSize="16sp"
        android:layout_below="@+id/bar_press_value"
        android:layout_alignLeft="@+id/bar_press_value"
        android:layout_alignStart="@+id/bar_press_value" />

    <TextView
        android:text="loading..."
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rain_value"
        android:textSize="16sp"
        android:layout_below="@+id/conductivity_value"
        android:layout_alignLeft="@+id/conductivity_value"
        android:layout_alignStart="@+id/conductivity_value" />

    <TextView
        android:text="loading..."
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/humidity_value"
        android:textSize="16sp"
        android:layout_below="@+id/rain_value"
        android:layout_alignLeft="@+id/rain_value"
        android:layout_alignStart="@+id/rain_value" />

    <TextView
        android:text="loading..."
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/water_temp_value"
        android:textSize="16sp"
        android:layout_below="@+id/humidity_value"
        android:layout_alignLeft="@+id/humidity_value"
        android:layout_alignStart="@+id/humidity_value" />

    <TextView
        android:text="@string/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView12"
        android:textSize="16sp"
        android:layout_below="@+id/riverBayName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:text="Updated:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/CurrentTimeTextView"
        android:textSize="16sp"
        android:layout_alignBaseline="@+id/lastUpdatedTime"
        android:layout_alignBottom="@+id/lastUpdatedTime"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ListView
        android:id="@+id/listView1"
        android:layout_height="160dp"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_below="@+id/textView16"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
       android:text="@string/lastUpdatedTime"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/lastUpdatedTime"
        android:textSize="16sp"
        android:layout_above="@+id/textView16"
        android:layout_alignLeft="@+id/textView16"
        android:layout_alignStart="@+id/textView16" />

    <TextView
        android:text="@string/tide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView13"
        android:textSize="16sp"
        android:layout_alignBaseline="@+id/textView12"
        android:layout_alignBottom="@+id/textView12"
        android:layout_toRightOf="@+id/textView11"
        android:layout_toEndOf="@+id/textView11" />

    <TextView
        android:text="visibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView11"
        android:textSize="16sp"
        android:layout_alignBaseline="@+id/visibility_value"
        android:layout_alignBottom="@+id/visibility_value"
        android:layout_alignRight="@+id/air_temp_label"
        android:layout_alignEnd="@+id/air_temp_label" />

    <TextView
        android:text="loading..."
        android:layout_width="wrap_content"
        android:id="@+id/wind_value"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:layout_alignLeft="@+id/water_temp_value"
        android:layout_alignStart="@+id/water_temp_value"
        android:layout_alignRight="@+id/lastUpdatedTime"
        android:layout_alignEnd="@+id/lastUpdatedTime"
        android:layout_below="@+id/water_temp_value"
        android:textSize="16sp" />

    <TextView
        android:text="loading..."
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/visibility_value"
        android:textSize="16sp"
        android:layout_below="@+id/wind_value"
        android:layout_alignLeft="@+id/wind_value"
        android:layout_alignStart="@+id/wind_value" />


</RelativeLayout>
